# android_oreo_bacon

./: .gitignore  .gn  Android.mk  AndroidManifest.xml  BUILD.gn  BoardConfigCommon.mk  EventLogTags.logtags  HACKING  Makefile  OWNERS  README.md  bacon.mk  bio_b64.c  common.mk  cryptfs.cpp  du.dependencies
btcore/: Android.mk  BUILD.gn
btcore/include/: bdaddr.h  counter.h  device_class.h  device_features.h  event_mask.h  hal_util.h  iac.h  module.h  osi_module.h  property.h  uuid.h  version.h
btcore/src/: bdaddr.c  bdaddr.cc  counter.c  device_class.c  device_class.cc  hal_util.cc  module.c  module.cc  osi_module.c  osi_module.cc  property.c  property.cc  uuid.c  uuid.cc
btcore/test/: bdaddr_test.cc  counter_test.cpp  device_class_test.cc  property_test.cc  property_test.cpp  uuid_test.cc
device/: Android.bp  Android.mk  BUILD.gn
device/include/: controller.h  esco_parameters.h  interop.h  interop_database.h
device/src/: controller.c  controller.cc  esco_parameters.cc  interop.c  interop.cc
device/test/: interop_test.cc  interop_test.cpp
hci/: Android.bp  Android.mk  BUILD.gn  EventLogTags.logtags
hci/include/: bt_hci_bdroid.h  bt_hci_lib.h  bt_vendor_lib.h  btsnoop.h  btsnoop_mem.h  buffer_allocator.h  controller.h  hci_audio.h  hci_hal.h  hci_inject.h  hci_internals.h  hci_layer.h  hci_packet_factory.h  hci_packet_parser.h  low_power_manager.h  packet_fragmenter.h  userial.h  vendor.h
hci/src/: bt_hci_bdroid.c  btsnoop.c  btsnoop.cc  btsnoop_mem.c  btsnoop_mem.cc  btsnoop_net.c  btsnoop_net.cc  buffer_allocator.c  buffer_allocator.cc  controller.c  hci_audio.c  hci_audio.cc  hci_hal.c  hci_hal.cc  hci_hal_h4.c  hci_hal_h4.cc  hci_hal_mct.c  hci_hal_mct.cc  hci_inject.c  hci_inject.cc  hci_layer.c  hci_layer.cc  hci_layer_android.cc  hci_layer_linux.cc  hci_packet_factory.c  hci_packet_factory.cc  hci_packet_parser.c  hci_packet_parser.cc  low_power_manager.c  low_power_manager.cc  lpm.c  packet_fragmenter.c  packet_fragmenter.cc  userial.c  vendor.c  vendor.cc
hci/test/: hci_hal_h4_test.cc  hci_hal_h4_test.cpp  hci_hal_mct_test.cc  hci_hal_mct_test.cpp  hci_layer_test.cc  hci_layer_test.cpp  low_power_manager_test.cc  low_power_manager_test.cpp  packet_fragmenter_test.cc  packet_fragmenter_test.cpp
main/: Android.bp  Android.mk  BUILD.gn  bte_conf.c  bte_conf.cc  bte_init.c  bte_init.cc  bte_init_cpp_logging.cc  bte_logmsg.c  bte_logmsg.cc  bte_main.c  bte_main.cc  main_int.h  stack_config.c  stack_config.cc
osi/: Android.bp  Android.mk  BUILD.gn
osi/include/: alarm.h  allocation_tracker.h  allocator.h  array.h  async_result.h  atomic.h  buffer.h  compat.h  config.h  counter.h  data_dispatcher.h  eager_reader.h  fixed_queue.h  future.h  hash_functions.h  hash_map.h  hash_map_utils.h  list.h  log.h  metrics.h  metrics_cpp.h  mutex.h  non_repeating_timer.h  osi.h  properties.h  reactor.h  ringbuffer.h  semaphore.h  socket.h  thread.h  time.h  wakelock.h
osi/src/: alarm.c  alarm.cc  allocation_tracker.c  allocation_tracker.cc  allocator.c  allocator.cc  array.c  array.cc  async_result.c  buffer.c  buffer.cc  compat.c  compat.cc  config.c  config.cc  data_dispatcher.c  data_dispatcher.cc  eager_reader.c  eager_reader.cc  fixed_queue.c  fixed_queue.cc  future.c  future.cc  hash_functions.c  hash_map.c  hash_map_utils.cc  list.c  list.cc  metrics.cc  metrics.cpp  metrics_linux.cc  metrics_linux.cpp  mutex.cc  non_repeating_timer.c  osi.c  osi.cc  properties.c  properties.cc  reactor.c  reactor.cc  (+12 more)
osi/test/: AlarmTestHarness.cc  AlarmTestHarness.cpp  AlarmTestHarness.h  AllocationTestHarness.cc  AllocationTestHarness.cpp  alarm_test.cc  alarm_test.cpp  allocation_tracker_test.cc  allocation_tracker_test.cpp  allocator_test.cc  array_test.cc  async_result_test.cpp  atomic_test.cpp  config_test.cc  config_test.cpp  data_dispatcher_test.cc  data_dispatcher_test.cpp  eager_reader_test.cc  eager_reader_test.cpp  fixed_queue_test.cc  future_test.cc  hash_map_test.cpp  hash_map_utils_test.cc  list_test.cc  list_test.cpp  metrics_test.cc  metrics_test.cpp  properties_test.cc  reactor_test.cc  reactor_test.cpp  ringbuffer_test.cc  ringbuffer_test.cpp  semaphore_test.cc  test_stubs.h  thread_test.cc  thread_test.cpp  time_test.cc  wakelock_test.cc
service/: Android.bp  Android.mk  BUILD.gn  a2dp_source.cpp  a2dp_source.h  adapter.cc  adapter.cpp  adapter.h  adapter_state.cpp  adapter_state.h  advertise_data.cpp  advertise_settings.cpp  bluetooth_client_instance.h  bluetoothtbd.rc  core_stack.cpp  core_stack.h  daemon.cpp  daemon.h  gatt_client.cpp  gatt_client.h  gatt_identifier.cpp  gatt_identifier.h  gatt_server.cc  gatt_server.cpp  gatt_server.h  gatt_server_old.cc  gatt_server_old.cpp  gatt_server_old.h  host.cpp  host.h  logging_helpers.cpp  logging_helpers.h  low_energy_advertiser.cc  low_energy_advertiser.h  low_energy_client.cc  low_energy_client.cpp  low_energy_client.h  low_energy_constants.h  low_energy_scanner.cc  low_energy_scanner.h  (+8 more)
service/base/: base64.cpp  base64.h  string_number_conversions.cpp  string_number_conversions.h  string_split.cpp  string_split.h
service/client/: main.cc  main.cpp
service/doc/: IBluetooth.txt  IBluetoothGattServerCallback.txt  IBluetoothLowEnergy.txt  IBluetoothLowEnergyCallback.txt
service/hal/: bluetooth_gatt_interface.cc  bluetooth_gatt_interface.cpp  bluetooth_gatt_interface.h  bluetooth_interface.cc  bluetooth_interface.cpp  bluetooth_interface.h  fake_bluetooth_gatt_interface.cc  fake_bluetooth_gatt_interface.cpp  fake_bluetooth_gatt_interface.h  fake_bluetooth_interface.cc  fake_bluetooth_interface.cpp  fake_bluetooth_interface.h  gatt_helpers.h
service/ipc/: ipc_handler.cpp  ipc_handler.h  ipc_handler_linux.h  ipc_handler_unix.cpp  ipc_handler_unix.h  ipc_manager.cpp  ipc_manager.h  linux_ipc_host.cpp  linux_ipc_host.h  unix_ipc_host.cpp  unix_ipc_host.h
service/modp_b64/: modp_b64_data.h
service/test/: ParcelableTest.aidl  adapter_unittest.cc  adapter_unittest.cpp  advertise_data_unittest.cc  advertise_data_unittest.cpp  fake_hal_bluetooth_interface.cpp  fake_hal_bluetooth_interface.h  main.cc  (+22 more)
(+1534 files in other folders)
