source_set("hci") {
  sources = [
    "src/btsnoop.c",
    "src/btsnoop_net.c",
    "src/buffer_allocator.c",
    "src/hci_hal.c",
    "src/hci_hal_h4.c",
    "src/hci_hal_mct.c",
    "src/hci_inject.c",
    "src/hci_layer.c",
    "src/hci_packet_factory.c",
    "src/hci_packet_parser.c",
    "src/low_power_manager.c",
    "src/packet_fragmenter.c",
    "src/vendor.c",
  ]

  include_dirs = [
    "include",
    "//",
    "//include",
    "//btcore/include",
    "//gki/common",
    "//gki/ulinux",
    "//osi/include",
    "//stack/include",
    "//utils/include",
  ]
}

executable("net_test_hci") {
  sources = [
    "//osi/test/AllocationTestHarness.cpp",
    "//osi/test/AlarmTestHarness.cpp",
    "test/hci_hal_h4_test.cpp",
    "test/hci_hal_mct_test.cpp",
    "test/hci_layer_test.cpp",
    "test/low_power_manager_test.cpp",
    "test/packet_fragmenter_test.cpp",
  ]

  sources += [ "//main/stack_config.c" ]

  include_dirs = [
    "include",
    "//",
    "//include",
    "//btcore/include",
    "//gki/common",
    "//gki/ulinux",
    "//osi/include",
    "//osi/test",
    "//stack/include",
    "//utils/include",
  ]

  cflags = [
    "-Wno-unused-variable",
  ]

  deps = [
    "//hci",
    "//osi",
    "//btcore",
  ]

  deps += [
    "//gki",
    "//device",
  ]

  libs = [ "-lpthread", "-lrt", "-ldl" ]
}
