#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

static_library("osi") {
  sources = [
    "src/alarm.c",
    "src/allocation_tracker.c",
    "src/allocator.c",
    "src/array.c",
    "src/buffer.c",
    "src/compat.c",
    "src/config.c",
    "src/data_dispatcher.c",
    "src/eager_reader.c",
    "src/fixed_queue.c",
    "src/future.c",
    "src/hash_functions.c",
    "src/hash_map.c",
    "src/list.c",
    "src/non_repeating_timer.c",
    "src/reactor.c",
    "src/semaphore.c",
    "src/socket.c",

    # TODO(mcchou): Remove these sources after platform specific
    # dependencies are abstracted.
    "src/socket_utils/socket_local_client.c",
    "src/socket_utils/socket_local_server.c",

    "src/thread.c",
  ]

  include_dirs = [
    "include",
    "//"
  ]
}

executable("net_test_osi") {
  testonly = true
  sources = [
    "test/AlarmTestHarness.cpp",
    "test/AllocationTestHarness.cpp",
    "test/alarm_test.cpp",
    "test/allocation_tracker_test.cpp",
    "test/array_test.cpp",
    "test/atomic_test.cpp",
    "test/config_test.cpp",
    "test/data_dispatcher_test.cpp",
    "test/eager_reader_test.cpp",
    "test/future_test.cpp",
    "test/hash_map_test.cpp",
    "test/list_test.cpp",
    "test/reactor_test.cpp",
    "test/thread_test.cpp",
  ]

  include_dirs = [
    "include",
    "//",
  ]

  deps = [
    "//osi",
    "//third_party/gtest:gtest_main",
  ]

  libs = [ "-lpthread", "-lrt" ]
}
