#
#  Copyright (C) 2015 Google
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

source_set("service") {
  sources = [
    "adapter.cpp",
    "adapter_state.cpp",
    "daemon.cpp",
    "gatt_server.cpp",
    "hal/bluetooth_interface.cpp",
    "ipc/binder/bluetooth_binder_server.cpp",
    "ipc/binder/IBluetooth.cpp",
    "ipc/binder/IBluetoothCallback.cpp",
    "ipc/binder/ipc_handler_binder.cpp",
    "ipc/ipc_handler.cpp",
    "ipc/ipc_handler_linux.cpp",
    "ipc/ipc_manager.cpp",
    "ipc/linux_ipc_host.cpp",
    "logging_helpers.cpp",
    "settings.cpp",
    "util/atomic_string.cpp",
    "uuid.cpp"
  ]

  include_dirs = [
    "//",
    "//third_party/libchrome"
  ]
}

executable("bluetoothtbd") {
  sources = [
    "main.cpp"
  ]

  deps = [
    ":service",
    "//btcore",
    "//third_party/libchrome:base",
    "//third_party/modp_b64"
  ]

  include_dirs = [
    "//",
    "//third_party/libchrome"
  ]

  libs = [ "-ldl", "-lpthread", "-lrt" ]
}

executable("service_unittests") {
  testonly = true
  sources = [
    "test/fake_hal_util.cpp",
    "test/ipc_linux_unittest.cpp",
    "test/settings_unittest.cpp",
    "test/uuid_unittest.cpp",
  ]

  include_dirs = [
    "//",
    "//third_party/gmock/include",
    "//third_party/libchrome"
  ]

  deps = [
    ":service",
    "//third_party/gmock:gmock_main",
    "//third_party/gtest:gtest_main",
    "//third_party/libchrome:base",
    "//third_party/modp_b64",
  ]
}
