shared_library("test_vendor_lib") {
  sources = [
    "src/bredr_controller.cc",
    "src/bt_vendor.cc",
    "src/command_packet.cc",
    "src/event_packet.cc",
    "src/hci_handler.cc",
    "src/hci_transport.cc",
    "src/packet.cc",
    "src/packet_stream.cc",
  ]

  include_dirs = [
    "include",
    "//",
    # TODO(dennischeng): Ideally we should need to have the lines below for
    # indirect includes.
    "//osi/include",
    "//stack/include",
  ]

  # TODO(dennischeng): Add libchrome as a dependency.
}

# TODO(dennischeng): Add a unit test target.
