shared_library("test_vendor_lib") {
  sources = [
    "src/bt_vendor.cc",
    "src/command_packet.cc",
    "src/dual_mode__controller.cc",
    "src/event_packet.cc",
    "src/hci_handler.cc",
    "src/hci_transport.cc",
    "src/packet.cc",
    "src/packet_stream.cc",
  ]

  include_dirs = [
    "include",
    "//",
    # TODO(dennischeng): Ideally we should need to have the lines below for
    # indirect includes.
    "//osi/include",
    "//stack/include",
  ]

  deps = [
    "//third_party/libchrome",
  ]
}

# TODO(dennischeng): Add a unit test target.
